fix: align section heading icon

--- a/app/packs/stylesheets/decidim/theme-barcelona/_section-heading.scss
+++ b/app/packs/stylesheets/decidim/theme-barcelona/_section-heading.scss
@@ -5,5 +5,5 @@
   width: 0.9rem;
   height: 0.9rem;
   margin-right: 0.3rem;
-  margin-bottom: -0.11rem;
+  margin-top: 0.35rem;
 }
